# First_Aid_Agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: rag.yaml
data/00_texts/: firstAidIns.txt
data/docs/: firstAidIns.txt
data/docs/de/: firstAid_de.txt
data/docs/en/: firstAid_en.txt
data/index/: meta.jsonl
notebooks/: checkSetup.ipynb  firstAid.ipynb
scripts/: ask.sh  build_index.py
src/rag/: Z_chunk.py  Z_indexer.py  Z_retriever.py  chunk.py  chunk_custom.py  cli.py  client.py  embed.py  generator.py  indexer.py  interfaces.py  retriever.py  server.py
tests/: Z_test.py
tests/integration/: test_pipeline.py
